--- a/src/thumbtack/templates/base.html
+++ b/src/thumbtack/templates/base.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Thumbtack</title>
 
-  <link href="/static/css/thumbtack.css" rel="stylesheet" type="text/css" >
-  <script type="text/javascript" src="/static/js/thumbtack.js"></script>
+  <link href={{ url_for("static", filename="css/thumbtack.css") }} rel="stylesheet" type="text/css" >
+  <script type="text/javascript" src={{ url_for("static", filename="js/thumbtack.js") }}></script>
 
 </head>
 <body onload="main()">
