--- a/src/thumbtack/templates/form_complete.html
+++ b/src/thumbtack/templates/form_complete.html
@@ -7,6 +7,6 @@
 
   <p>{{ status }}</p>
 
-  <p><a href="/">Back to home</a></p>
+  <p><a href="{{ url_for('.index') }}">Back to home</a></p>
 
 {% endblock %}
