--- a/src/thumbtack/templates/index.html
+++ b/src/thumbtack/templates/index.html
@@ -35,7 +35,7 @@
       <th>Mount</th>
       <th>Unmount</th>
       <th>Mountpoints</th>
-      <th>Add mountpoint <div class="tooltip">&#9432;<span class="tooltiptext">Add manually created mounpoint to the thumbtack databse.</span></div></th>
+      <th>Add mountpoint <div class="tooltip">&#9432;<span class="tooltiptext">Add manually created mounpoint to the thumbtack database.</span></div></th>
     </tr>
     {% for image in images %}
       <tr>
