--- a/src/thumbtack/templates/index.html
+++ b/src/thumbtack/templates/index.html
@@ -59,17 +59,18 @@
             <input type="hidden" name="operation" value="mount">
             <span id="dec_caret" class="caret">Decryption options</span>
               <ul class="nested">
-                <label for="decryption_methods">Decryption Method:</label>
-                <select name="decryption methods" id="decryption_methods">
+                <label for="decryption_method">Decryption Method:</label>
+                <select name="decryption method" id="decryption_method">
                   <option value="none">---</option>
                   <option value="bitlocker password">bitlocker password</option>
                   <option value="bitlocker recovery key">bitlocker recovery key</option>
                   <option value="bitlocker full volume encryption and tweak key">bitlocker full volume encryption and tweak key</option>
                   <option value="luks passphrase">luks passphrase</option>
                 </select>
-                <label for="key">Decryption key:</label>
+		            <br>
+		            <label for="key">Decryption key:</label>
                 <input type="password" id="key" name="key">
-                <input type="checkbox" onclick="toggleKey()">Show key
+                <input type="checkbox" onclick="if (this.checked) {this.previousElementSibling.type = 'text'} else {this.previousElementSibling.type = 'password'};">Show key
               </ul>
             <button>Mount</button>
           </form>
